# 12.homework

./: CMakeLists.txt  main.cpp  readme.md
.github/workflows/: release.yaml
src/controller/: Controller.cpp  Controller.h
src/map/: IMap.h  Map.cpp  Map.h
src/reduce/: Reduce.cpp  Reduce.h
src/split/: ISplit.h  Split.cpp  Split.h
src/thread_pool/: ThreadPool.cpp  ThreadPool.h
test/: CMakeLists.txt  CMakeLists.txt.in  suite1  suite2  test_suite1.cpp  test_suite2.cpp  test_suite3.cpp
